# feedback-management-system

./: .gitignore  Dockerfile  convert_font_to_base64.py  docker-compose.yml  pyproject.toml  requirements.txt
src/: env.sample  passenger_wsgi.py
src/invoices/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  views.py.bckp
src/invoices/migrations/: 0001_initial.py  0002_feedback_created_by.py  0002_invoice_drinking_water_fee_and_more.py  0003_alter_feedback_attachment_alter_feedback_created_at_and_more.py  0003_alter_invoice_pan_or_vat_number.py  0004_alter_feedback_options_remove_feedback_feedback_date_and_more.py  0004_alter_invoice_date.py  0005_alter_feedback_options_alter_feedback_anonymous_and_more.py
src/rental_system/: mixins.py  settings.py  settings.py.bckp  urls.py
src/static/css/: admin_dashboard.css  change_password.css  create_invoice.css  feedback_detail.css  feedback_list.css  invoice.css  login.css  user_dashboard.css  view_profile.css
src/static/js/: create_invoice.js  invoice.js  manage_invoice.js
src/staticfiles/css/: create_invoice.css  register.css  style.css  user_feedback_detail.css  view_tenants.css
src/templates/: 404.html  admin_dashboard.html  base.html  base_unauthenticated.html  user_dashboard.html
src/templates/snippet/: footer.html  scripts.html
src/tenants/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/tenants/migrations/: 0001_initial.py  0002_alter_tenant_house_name.py  (+3 more)
src/users/: admin.py  context_processors.py  forms.py  managers.py  models.py  urls.py  utils.py  views.py
(+48 files in other folders)
