[tool.poetry]
name = "rental-system"
version = "0.1.0"
description = ""
authors = ["acharyapuru <acharyapuru@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
django-environ = "^0.12.0"
django-jazzmin = "^3.0.1"
requests = "^2.32.3"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
